src/test/ui/traits/cycle-cache-err-60010.stderr
error[E0275]: overflow evaluating the requirement `SalsaStorage: RefUnwindSafe`
  --> $DIR/cycle-cache-err-60010.rs:69:5
   |
LL |     fn parse(&self) {
   |     --------------- required by `SourceDatabase::parse`
...
LL |     SourceDatabase::parse(db);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required because it appears within the type `*const SalsaStorage`
   = note: required because it appears within the type `Unique<SalsaStorage>`
   = note: required because it appears within the type `Box<SalsaStorage>`
   = note: required because it appears within the type `Runtime<RootDatabase>`
   = note: required because it appears within the type `RootDatabase`
   = note: required because of the requirements on the impl of `SourceDatabase` for `RootDatabase`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
